src/main/java/uk/ac/cam/crsid/Parallang/Parser/ParallogParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. ParallogParser.java */
package uk.ac.cam.crsid.Parallang.Parser;

import scala.Option;

public class ParallogParser/*@bgen(jjtree)*/implements ParallogParserTreeConstants, ParallogParserConstants {/*@bgen(jjtree)*/
  protected JJTParallogParserState jjtree = new JJTParallogParserState();public static void main(String args[]) {
        System.out.println("Reading from stdin...");
        ParallogParser parser = new ParallogParser(System.in);
        try {
            ASTStart result = parser.Start();
            result.dump("");
        } catch (Exception e) {
            e.printStackTrace();
        }
    }

  final public ASTStart Start() throws ParseException {
                           /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Code();
      jj_consume_token(0);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
     {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Type() throws ParseException {
 /*@bgen(jjtree) Type */
    ASTType jjtn000 = new ASTType(JJTTYPE);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Int:
        t = jj_consume_token(Int);
        break;
      case Array:
        t = jj_consume_token(Array);
        jj_consume_token(47);
        Type();
        jj_consume_token(48);
        break;
      case Option:
        t = jj_consume_token(Option);
        jj_consume_token(47);
        Type();
        jj_consume_token(48);
        break;
      case Struct:
        t = jj_consume_token(Struct);
        Name();
        break;
      case Unit:
        t = jj_consume_token(Unit);
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.setType(t.image);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void Code() throws ParseException {
 /*@bgen(jjtree) Code */
  ASTCode jjtn000 = new ASTCode(JJTCODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case Fn:
        case Var:
        case Array:
        case Struct:
        case New:
        case Unit:
        case Len:
        case Get:
        case Println:
        case None:
        case Some:
        case If:
        case For:
        case While:
        case Return:
        case Send:
        case Recv:
        case MyX:
        case MyY:
        case NumRows:
        case NumCols:
        case Infinity:
        case Name:
        case Number:
        case 49:
        case 50:
        case 53:
        case 65:
        case 66:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case Fn:
        case Var:
        case Struct:
        case Println:
        case If:
        case For:
        case While:
        case Return:
        case Send:
        case Recv:
          Statement();
          break;
        case Array:
        case New:
        case Unit:
        case Len:
        case Get:
        case None:
        case Some:
        case MyX:
        case MyY:
        case NumRows:
        case NumCols:
        case Infinity:
        case Name:
        case Number:
        case 49:
        case 50:
        case 53:
        case 65:
        case 66:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case Array:
          case New:
          case Unit:
          case Len:
          case Get:
          case None:
          case Some:
          case MyX:
          case MyY:
          case NumRows:
          case NumCols:
          case Infinity:
          case Name:
          case Number:
          case 50:
          case 53:
          case 65:
          case 66:
            SoloExpression();
            break;
          default:
            jj_la1[2] = jj_gen;
            ;
          }
          jj_consume_token(49);
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void Function() throws ParseException {
 /*@bgen(jjtree) Function */
  ASTFunction jjtn000 = new ASTFunction(JJTFUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token blameToken;
    try {
      blameToken = jj_consume_token(Fn);
      Name();
      jj_consume_token(50);
      DefnArguments();
      jj_consume_token(51);
      jj_consume_token(52);
      Type();
      jj_consume_token(53);
      Code();
      jj_consume_token(54);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.setBlameToken(blameToken);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void StructureDecl() throws ParseException {
 /*@bgen(jjtree) StructureDecl */
 ASTStructureDecl jjtn000 = new ASTStructureDecl(JJTSTRUCTUREDECL);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token blameToken;
    try {
      blameToken = jj_consume_token(Struct);
      Name();
      jj_consume_token(50);
      DefnArguments();
      jj_consume_token(51);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.setBlameToken(blameToken);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void DefnArguments() throws ParseException {
 /*@bgen(jjtree) DefnArguments */
  ASTDefnArguments jjtn000 = new ASTDefnArguments(JJTDEFNARGUMENTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Name:
        Name();
        jj_consume_token(55);
        Type();
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 56:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_2;
          }
          jj_consume_token(56);
          Name();
          jj_consume_token(55);
          Type();
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Return:
      Return();
      jj_consume_token(49);
      break;
    case If:
      Conditional();
      break;
    case Var:
      Declaration();
      jj_consume_token(49);
      break;
    case Struct:
      StructureDecl();
      break;
    case Fn:
      Function();
      break;
    case While:
      WhileLoop();
      break;
    case For:
      ForLoop();
      break;
    case Send:
      Send();
      jj_consume_token(49);
      break;
    case Recv:
      BlockRecv();
      jj_consume_token(49);
      break;
    case Println:
      Println();
      jj_consume_token(49);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Len() throws ParseException {
 /*@bgen(jjtree) Len */
  ASTLen jjtn000 = new ASTLen(JJTLEN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token blameToken;
    try {
      blameToken = jj_consume_token(Len);
      jj_consume_token(50);
      Expression();
      jj_consume_token(51);
                                            jjtree.closeNodeScope(jjtn000, true);
                                            jjtc000 = false;
                                            jjtn000.setBlameToken(blameToken);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void Println() throws ParseException {
 /*@bgen(jjtree) Println */
  ASTPrintln jjtn000 = new ASTPrintln(JJTPRINTLN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(Println);
      jj_consume_token(50);
      Expression();
      jj_consume_token(51);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void Expression() throws ParseException {
    Assignment();
  }

  final public void Declaration() throws ParseException {
 /*@bgen(jjtree) Declaration */
  ASTDeclaration jjtn000 = new ASTDeclaration(JJTDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token blameToken;
    try {
      blameToken = jj_consume_token(Var);
      Name();
      jj_consume_token(55);
      Type();
      jj_consume_token(57);
      Expression();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.setBlameToken(blameToken);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void Send() throws ParseException {
 /*@bgen(jjtree) Send */
  ASTSend jjtn000 = new ASTSend(JJTSEND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token blameToken;
    try {
      jj_consume_token(Send);
      Expression();
      blameToken = jj_consume_token(52);
      SendTarget();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.setBlameToken(blameToken);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void SendTarget() throws ParseException {
 /*@bgen(jjtree) Target */
  ASTTarget jjtn000 = new ASTTarget(JJTTARGET);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token target;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Broadcast:
        target = jj_consume_token(Broadcast);
        break;
      case BroadcastRow:
        target = jj_consume_token(BroadcastRow);
        break;
      case BroadcastCol:
        target = jj_consume_token(BroadcastCol);
        break;
      case Worker:
        target = jj_consume_token(Worker);
        Expression();
        jj_consume_token(56);
        Expression();
        break;
      case External:
        target = jj_consume_token(External);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.setTarget(target.image);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void RecvTarget() throws ParseException {
 /*@bgen(jjtree) Target */
  ASTTarget jjtn000 = new ASTTarget(JJTTARGET);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token target;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Worker:
        target = jj_consume_token(Worker);
        Expression();
        jj_consume_token(56);
        Expression();
        break;
      case External:
        target = jj_consume_token(External);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.setTarget(target.image);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void BlockRecv() throws ParseException {
 /*@bgen(jjtree) BlockRecv */
    ASTBlockRecv jjtn000 = new ASTBlockRecv(JJTBLOCKRECV);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token blameToken;
    Token varToken = null;
    try {
      jj_consume_token(Recv);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 47:
        varToken = jj_consume_token(47);
        Type();
        jj_consume_token(48);
        Name();
        break;
      case Name:
        lvalue();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      blameToken = jj_consume_token(58);
      RecvTarget();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        jjtn000.setBlameToken(blameToken);
        jjtn000.setVarToken(varToken);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void TryRecv() throws ParseException {
 /*@bgen(jjtree) TryRecv */
  ASTTryRecv jjtn000 = new ASTTryRecv(JJTTRYRECV);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token blameToken;
    try {
      jj_consume_token(TryRecv);
      lvalue();
      blameToken = jj_consume_token(58);
      RecvTarget();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.setBlameToken(blameToken);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void lvalue() throws ParseException {
    LValueAttributeAccess();
  }

  final public void Conditional() throws ParseException {
 /*@bgen(jjtree) Conditional */
  ASTConditional jjtn000 = new ASTConditional(JJTCONDITIONAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      If();
      label_3:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_3;
        }
        ElseIf();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Else:
        Else();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }
